--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,13 @@ http {
         listen 80;
         server_name localhost;
 
+        # Health check endpoint
+        location /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+
         # API routes
         location /api/ {
             proxy_pass http://api/;
