update deploy script - typo

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Copy files
         run: |
           rsync -avz --delete \
-            -e  -o StrictHostKeyChecking=no \
+            -e StrictHostKeyChecking=no \
             --exclude='.git' \
             --exclude='node_modules' \
             --exclude='.env' \
