update deploy script - typo

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,7 @@ jobs:
 
       - name: Copy files
         run: |
-          rsync -avz --delete \
-            -e StrictHostKeyChecking=no \
+          rsync -avz --delete -e \
             --exclude='.git' \
             --exclude='node_modules' \
             --exclude='.env' \
