--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -20,6 +20,6 @@
     "noFallthroughCasesInSwitch": true,
     "allowImportingTsExtensions": false
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "prisma/**/*", "*.ts", "*.js"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
