--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,11 +49,11 @@ jobs:
           script: |
             cd /var/www/weightlosstracker
             export $(cat .env.production | grep -v '^#' | xargs)
-            docker compose docker-compose.server.yml down || true
+            docker-compose docker-compose.server.yml down || true
             echo "Building Docker images..."
-            docker compose docker-compose.server.yml build --no-cache
+            docker-compose docker-compose.server.yml build --no-cache
             echo "Starting containers..."
-            docker compose docker-compose.server.yml up -d
+            docker-compose docker-compose.server.yml up -d
             echo "Waiting for services to start..."
             sleep 15
 
@@ -66,7 +66,7 @@ jobs:
           script: |
             cd /var/www/weightlosstracker
             echo "Running database migrations..."
-            docker compose docker-compose.server.yml exec -T api pnpm prisma migrate deploy
+            docker-compose docker-compose.server.yml exec -T api pnpm prisma migrate deploy
             echo "Migrations completed"
 
       - name: Health check
@@ -92,7 +92,7 @@ jobs:
               echo "Web health check failed (HTTP $WEB_HEALTH)"
               exit 1
             fi
-            docker compose docker-compose.server.yml ps
+            docker-compose docker-compose.server.yml ps
 
       - name: Cleanup old Docker images
         uses: appleboy/ssh-action@v1.0.3
@@ -111,7 +111,7 @@ jobs:
           echo "Files deployed to: /var/www/weightlosstracker"
           echo "Docker containers started"
           echo "Health checks passed"
-          echo "View logs: ssh ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} 'cd /var/www/weightlosstracker && docker compose docker-compose.server.yml logs -f'"
+          echo "View logs: ssh ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} 'cd /var/www/weightlosstracker && docker-compose docker-compose.server.yml logs -f'"
 
       - name: Notify on failure
         if: failure()
