refactor: consolidate docker-compose files into single environment-aware configuration
- Replace docker-compose.{prod,server}.yml with single docker-compose.yml
- Use environment variables for environment-specific config
- Add .env.development and .env.production.example
- Use Docker Compose profiles for optional services (dev tools, nginx)
- Add DOCKER.md with comprehensive usage guide
- Update GitHub Actions workflow to use unified docker-compose.yml
- Bind production ports to localhost by default for security
- Remove dependency on multiple docker-compose files

Benefits:
- Single source of truth for Docker configuration
- Consistent behavior across all environments
- Easier to maintain and understand
- Better security with localhost-only bindings in production

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,25 +1,50 @@
-# Database Configuration
+# Production Environment Configuration
+# Copy this file to .env on your server and update with real values
+# IMPORTANT: Keep .env file secure and never commit it to git
+
+# Build and deployment mode
+BUILD_MODE=prod
+NODE_ENV=production
+IMAGE_TAG=latest
+
+# Profiles (empty = only core services, no dev tools, no nginx container)
+# Use 'with-nginx' if you want containerized nginx, otherwise use host nginx
+COMPOSE_PROFILES=
+
+# Database - CHANGE THESE VALUES
 POSTGRES_USER=weighttracker
-POSTGRES_PASSWORD=CHANGE_THIS_STRONG_PASSWORD
-POSTGRES_DB=weighttracker_prod
+POSTGRES_PASSWORD=CHANGE_THIS_SECURE_PASSWORD
+POSTGRES_DB=weighttracker
+POSTGRES_PORT=5432
 
-# Redis Configuration
-REDIS_PASSWORD=CHANGE_THIS_REDIS_PASSWORD
+# Redis
+REDIS_PORT=6379
 
-# JWT Secrets (generate with: openssl rand -base64 32)
-JWT_SECRET=CHANGE_THIS_JWT_SECRET
-JWT_REFRESH_SECRET=CHANGE_THIS_JWT_REFRESH_SECRET
+# API - Bind to localhost only (nginx on host will proxy)
+API_PORT=127.0.0.1:4000
+PRISMA_STUDIO_PORT=127.0.0.1:5555
+JWT_SECRET=CHANGE_THIS_TO_RANDOM_SECRET_MIN_32_CHARS
+JWT_REFRESH_SECRET=CHANGE_THIS_TO_DIFFERENT_RANDOM_SECRET_MIN_32_CHARS
 
-# SMTP Configuration (for production email)
-SMTP_HOST=smtp.yourdomain.com
-SMTP_PORT=587
-SMTP_USER=noreply@yourdomain.com
-SMTP_PASS=your_smtp_password
-
-# Application URLs
-CORS_ORIGIN=https://yourdomain.com
+# Web/Frontend - Bind to localhost only
+WEB_PORT=127.0.0.1:3000
 PUBLIC_API_URL=https://yourdomain.com/api
 
-# Port Configuration
-HTTP_PORT=80
-HTTPS_PORT=443
+# Nginx (if using with-nginx profile)
+NGINX_PORT=80
+
+# Email - Use real SMTP server in production
+SMTP_HOST=smtp.yourmailprovider.com
+SMTP_PORT=587
+SMTP_USER=your-smtp-username
+SMTP_PASSWORD=your-smtp-password
+
+# CORS - Your production domain
+CORS_ORIGIN=https://yourdomain.com
+
+# Volume mounts - Use empty/dummy paths in production (no hot reloading needed)
+API_SRC_MOUNT=/dev/null
+API_PRISMA_MOUNT=/dev/null
+WEB_SRC_MOUNT=/dev/null
+WEB_PUBLIC_MOUNT=/dev/null
+MOUNT_MODE=ro
