--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           scp -o StrictHostKeyChecking=no -r ./* ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:/var/www/weightlosstracker/
 
-      - name: Create .env.production if not exists
+      - name: Create .env if not exists
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -32,12 +32,12 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /var/www/weightlosstracker
-            if [ ! -f .env.production ]; then
-              echo "Creating .env.production from example..."
-              cp .env.production.example .env.production
-              echo "WARNING: Please configure .env.production with actual values!"
+            if [ ! -f .env ]; then
+              echo "Creating .env from example..."
+              cp .env.production.example .env
+              echo "WARNING: Please configure .env with actual values!"
             else
-              echo ".env.production already exists, skipping..."
+              echo ".env already exists, skipping..."
             fi
 
       - name: Build and start Docker containers
@@ -48,12 +48,12 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /var/www/weightlosstracker
-            export $(cat .env.production | grep -v '^#' | xargs)
-            docker-compose -f docker-compose.server.yml down || true
+            echo "Stopping containers..."
+            docker-compose down || true
             echo "Building Docker images..."
-            docker-compose -f docker-compose.server.yml build --no-cache
+            docker-compose build --no-cache
             echo "Starting containers..."
-            docker-compose -f docker-compose.server.yml up -d
+            docker-compose up -d
             echo "Waiting for services to start..."
             sleep 15
 
@@ -66,7 +66,7 @@ jobs:
           script: |
             cd /var/www/weightlosstracker
             echo "Running database migrations..."
-            docker-compose -f docker-compose.server.yml exec -T api pnpm prisma migrate deploy
+            docker-compose exec -T api pnpm prisma migrate deploy
             echo "Migrations completed"
 
       - name: Health check
