--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,21 @@ services:
     image: postgres:16-alpine
     container_name: weight-tracker-db
     environment:
-      POSTGRES_USER: dev
-      POSTGRES_PASSWORD: devpassword
-      POSTGRES_DB: weighttracker
+      POSTGRES_USER: ${POSTGRES_USER:-dev}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-devpassword}
+      POSTGRES_DB: ${POSTGRES_DB:-weighttracker}
     ports:
-      - '5432:5432'
+      - '${POSTGRES_PORT:-5432}:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U dev -d weighttracker']
+      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER:-dev} -d ${POSTGRES_DB:-weighttracker}']
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
       - weight-tracker-network
+    restart: unless-stopped
 
   # Redis Cache
   redis:
@@ -25,7 +26,7 @@ services:
     container_name: weight-tracker-redis
     command: redis-server --appendonly yes
     ports:
-      - '6379:6379'
+      - '${REDIS_PORT:-6379}:6379'
     volumes:
       - redis_data:/data
     healthcheck:
@@ -35,8 +36,9 @@ services:
       retries: 5
     networks:
       - weight-tracker-network
+    restart: unless-stopped
 
-  # Redis Commander (GUI for Redis)
+  # Redis Commander (GUI for Redis) - Dev only
   redis-commander:
     image: rediscommander/redis-commander:latest
     container_name: weight-tracker-redis-commander
@@ -48,8 +50,11 @@ services:
       - redis
     networks:
       - weight-tracker-network
+    profiles:
+      - dev
+      - tools
 
-  # MailHog (Email testing)
+  # MailHog (Email testing) - Dev only
   mailhog:
     image: mailhog/mailhog:latest
     container_name: weight-tracker-mailhog
@@ -58,43 +63,56 @@ services:
       - '8025:8025' # Web UI
     networks:
       - weight-tracker-network
+    profiles:
+      - dev
+      - tools
 
-  # Nginx Reverse Proxy
+  # Nginx Reverse Proxy - Optional in production (use existing nginx)
   nginx:
     image: nginx:alpine
     container_name: weight-tracker-nginx
     ports:
-      - '80:80'
+      - '${NGINX_PORT:-80}:80'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       - api
       - web
     networks:
       - weight-tracker-network
+    restart: unless-stopped
+    profiles:
+      - dev
+      - with-nginx
 
   # Backend API (Node.js + Express)
   api:
     build:
       context: .
-      dockerfile: apps/api/Dockerfile.dev
+      dockerfile: apps/api/Dockerfile.${BUILD_MODE:-dev}
+      args:
+        NODE_ENV: ${NODE_ENV:-development}
+    image: weightlosstracker-api:${IMAGE_TAG:-latest}
     container_name: weight-tracker-api
     environment:
-      NODE_ENV: development
+      NODE_ENV: ${NODE_ENV:-development}
       PORT: 4000
-      DATABASE_URL: postgresql://dev:devpassword@postgres:5432/weighttracker
+      DATABASE_URL: postgresql://${POSTGRES_USER:-dev}:${POSTGRES_PASSWORD:-devpassword}@postgres:5432/${POSTGRES_DB:-weighttracker}
       REDIS_HOST: redis
       REDIS_PORT: 6379
-      JWT_SECRET: dev-jwt-secret-change-in-production
-      JWT_REFRESH_SECRET: dev-refresh-secret-change-in-production
-      SMTP_HOST: mailhog
-      SMTP_PORT: 1025
+      JWT_SECRET: ${JWT_SECRET:-dev-jwt-secret-change-in-production}
+      JWT_REFRESH_SECRET: ${JWT_REFRESH_SECRET:-dev-refresh-secret-change-in-production}
+      SMTP_HOST: ${SMTP_HOST:-mailhog}
+      SMTP_PORT: ${SMTP_PORT:-1025}
+      CORS_ORIGIN: ${CORS_ORIGIN:-http://localhost:3000}
     ports:
-      - '4000:4000'
-      - '5555:5555' # Prisma Studio
+      - '${API_PORT:-127.0.0.1:4000}:4000'
+      - '${PRISMA_STUDIO_PORT:-127.0.0.1:5555}:5555'
     volumes:
-      - ./apps/api/src:/workspace/apps/api/src
-      - ./apps/api/prisma:/workspace/apps/api/prisma
+      # Mount source code in development mode only
+      - ${API_SRC_MOUNT:-./apps/api/src}:/workspace/apps/api/src:${MOUNT_MODE:-rw}
+      - ${API_PRISMA_MOUNT:-./apps/api/prisma}:/workspace/apps/api/prisma:${MOUNT_MODE:-rw}
     depends_on:
       postgres:
         condition: service_healthy
@@ -102,23 +120,30 @@ services:
         condition: service_healthy
     networks:
       - weight-tracker-network
+    restart: unless-stopped
 
   # Frontend Web App (Astro)
   web:
     build:
       context: .
-      dockerfile: apps/web/Dockerfile.dev
+      dockerfile: apps/web/Dockerfile.${BUILD_MODE:-dev}
+      args:
+        NODE_ENV: ${NODE_ENV:-development}
+        PUBLIC_API_URL: ${PUBLIC_API_URL:-http://localhost/api}
+    image: weightlosstracker-web:${IMAGE_TAG:-latest}
     container_name: weight-tracker-web
     environment:
-      NODE_ENV: development
-      PUBLIC_API_URL: http://localhost/api
+      NODE_ENV: ${NODE_ENV:-development}
+      PUBLIC_API_URL: ${PUBLIC_API_URL:-http://localhost/api}
     ports:
-      - '3000:3000'
+      - '${WEB_PORT:-127.0.0.1:3000}:3000'
     volumes:
-      - ./apps/web/src:/workspace/apps/web/src
-      - ./apps/web/public:/workspace/apps/web/public
+      # Mount source code in development mode only
+      - ${WEB_SRC_MOUNT:-./apps/web/src}:/workspace/apps/web/src:${MOUNT_MODE:-rw}
+      - ${WEB_PUBLIC_MOUNT:-./apps/web/public}:/workspace/apps/web/public:${MOUNT_MODE:-rw}
     networks:
       - weight-tracker-network
+    restart: unless-stopped
 
 networks:
   weight-tracker-network:
